--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.0.0-rc.18",
     "core-js": "^2.6.5",
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
