--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^2.6.5",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
