--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "core-js": "^2.6.5",
+    "element-ui": "^2.7.2",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.5"
+    "vue-router": "^3.0.5",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
